# hqlc

./: .clang-format  .gitignore  CMakeLists.txt  HQLC_DESIGN.md  LICENSE  README.md
.github/workflows/: tests.yml  visqol.yml
include/: entropy.h  entropy_tables.h  fxp.h  hqlc.h  hqlc_bench.h  mdct.h  mdct_tables.h  pcm.h  psy.h  quant.h  tns.h
misc/esp-benchmark/: CMakeLists.txt  gen_test_pcm.py  sdkconfig
misc/esp-benchmark/hqlc/: CMakeLists.txt  linker.lf
misc/esp-benchmark/main/: CMakeLists.txt  bench.h  hqlc_bench_impl.h  hqlc_esp_codec.c  hqlc_esp_codec.h  main.c
misc/python/: __init__.py  __main__.py  bitstream.py  codec.py  constants.py  entropy.py  mdct.py  psy.py  pyproject.toml  quantizer.py  tns.py
scripts/: Dockerfile.visqol  ci_visqol.py  experiment_tns_vs_tes.py  gen_entropy_tables.py  gen_mdct_tables.py  visqol_bench.py
src/: entropy.c  entropy_tables.c  hqlc.c  hqlc_enc.c  mdct.c  mdct_tables.c  psy.c  quant.c  tns.c
tests/: CMakeLists.txt  test_entropy.c  test_mdct.c  test_roundtrip.c
