[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hqlc"
version = "0.1.0"
description = "HQLC Python reference codec"
requires-python = ">=3.10"
dependencies = [
    "numpy",
]

[project.scripts]
hqlc = "hqlc.codec:main"

[tool.setuptools.package-dir]
hqlc = "."
